--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,51 +1,49 @@
-<body>
-
-  <!-- search bar -->
-  <div class="container search-bar">
-    <div class="search-bar-outer">
-      <div class="search-bar-inner">
-        <form action="/search">
-          <h4 class="mb-2">尋找餐廳：</h4>
-          <div class="input-group">
-            <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
-              value="" aria-describedby="search-button">
-            <div class="input-group-append">
-              <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
-            </div>
+<!-- search bar -->
+<div class="container search-bar">
+  <div class="search-bar-outer">
+    <div class="search-bar-inner">
+      <form action="/search">
+        <h4 class="mb-2">尋找餐廳：<a href="/restaurant/new">新增餐廳</a></h4>
+        <div class="input-group">
+          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
+            value="" aria-describedby="search-button">
+          <div class="input-group-append">
+            <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
-        </form>
-      </div>
-    </div>
-  </div>
-
-  <!-- restaurant list -->
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-md-10 col-12 mx-auto">
-        <div class="card-columns">
-          {{#each restaurants}}
-          <a href="/restaurants/{{this.id}}" class="text-secondary">
-            <div class="card mb-3">
-              <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
-              <div class="card-body p-3">
-                <h6 class="card-title mb-1">{{this.name}}</h6>
-
-                <div class="restaurant-category mb-1">
-                  <i class="fas fa-utensils pr-2"></i>{{this.category}}
-                </div>
-
-                <span class="badge badge-pill badge-danger font-weight-normal">
-                  {{this.rating}}
-                  <i class="fas fa-star fa-xs"></i>
-                </span>
-              </div>
-              <a href="">詳細資訊</a>
-              <a href="">修改</a>
-              <button type="submit">刪除</button>
-            </div>
-          </a>
-          {{/each}}
         </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- restaurant list -->
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-10 col-12 mx-auto">
+      <div class="card-columns">
+        {{#each restaurants}}
+        <a href="/restaurants/{{this._id}}" class="text-secondary">
+          <div class="card mb-3">
+            <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
+            <div class="card-body p-3">
+              <h6 class="card-title mb-1">{{this.name}}</h6>
+
+              <div class="restaurant-category mb-1">
+                <i class="fas fa-utensils pr-2"></i>{{this.category}}
+              </div>
+
+              <span class="badge badge-pill badge-danger font-weight-normal">
+                {{this.rating}}
+                <i class="fas fa-star fa-xs"></i>
+              </span>
+            </div>
+            <a href="/restaurants/{{{this._id}}}">詳細資訊</a>
+            <a href="/restaurants/{{{this._id}}}/edit">修改</a>
+            <button type="submit">刪除</button>
+          </div>
+        </a>
+        {{/each}}
       </div>
     </div>
   </div>
+</div>
