--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,5 +1,5 @@
 <div class="container-form">
-  <form action="/restaurants" method="POST" style="width:60%; margin-left:40px ;margin-top:-300px;">
+  <form action="/restaurants/{{{store._id}}}" method="POST" style="width:60%; margin-left:40px ;margin-top:-300px;">
     <div class="form-row">
       <div class="form-group col-md-6">
         <div class="col">
