--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -43,6 +43,6 @@
     <div class="form-group">
       <input type="text" class="form-control" placeholder="描述" name="description" required>
     </div>
-    <button type="submit" class="btn btn-primary" style="position:absolute ;top: 320px; right:400px;">新增</button>
+    <button type="submit" class="btn btn-info btn-lg" style="position:absolute ;top: 310px; right:400px;">新增</button>
   </form>
 </div>
