--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -1,42 +1,47 @@
-<body>
-  <h1 class="mb-1 restaurant-show-title">{{store.name}}</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-md-10 mx-auto">
+<div class="button-box-2">
+  <a href="/restaurants/{{{store._id}}}/edit">修改</a>
+  <a href="/">返回</a>
+  <form action="/restaurants/{{{store._id}}}/delete" method="POST" style="display: inline;">
+    <button type="submit" class="btn btn-sm">刪除</button>
+  </form>
+</div>
+<h1 class="mb-1 restaurant-show-title">{{store.name}}</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-md-10 mx-auto">
 
-        <p class="mb-1">
-          <span class="text-secondary">
-            <i class="fas fa-utensils pr-2"></i>
-            類別：
-          </span>
-          {{store.category}}
-        </p>
+      <p class="mb-1">
+        <span class="text-secondary">
+          <i class="fas fa-utensils pr-2"></i>
+          類別：
+        </span>
+        {{store.category}}
+      </p>
 
-        <p class="mb-1">
-          <span class="text-secondary">
-            <i class="fas fa-map-marker-alt pr-2"></i>
-            地址：
-          </span>
-          {{store.location}}
-          <a href="{{store.google_map}}" class="text-secondary" target="_blank">
-            <i class="fas fa-location-arrow pr-2 fa-xs"></i>
-          </a>
-        </p>
+      <p class="mb-1">
+        <span class="text-secondary">
+          <i class="fas fa-map-marker-alt pr-2"></i>
+          地址：
+        </span>
+        {{store.location}}
+        <a href="{{store.google_map}}" class="text-secondary" target="_blank">
+          <i class="fas fa-location-arrow pr-2 fa-xs"></i>
+        </a>
+      </p>
 
-        <p class="mb-1">
-          <span class="text-secondary">
-            <i class="fas fa-mobile-alt pr-2"></i>
-            電話：
-          </span>
-          {{store.phone}}
-        </p>
+      <p class="mb-1">
+        <span class="text-secondary">
+          <i class="fas fa-mobile-alt pr-2"></i>
+          電話：
+        </span>
+        {{store.phone}}
+      </p>
 
-        <p class="mb-5">
-          {{store.description}}
-        </p>
+      <p class="mb-5">
+        {{store.description}}
+      </p>
 
-        <img class="rounded mx-auto d-block mb-4 w-100" src="{{store.image}}" alt="{{store.name}}" style="max-width: 600px;">
-      </div>
+      <img class="rounded mx-auto d-block mb-4 w-100" src="{{store.image}}" alt="{{store.name}}" style="max-width: 600px;">
     </div>
   </div>
-</body>
+</div>
