--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,5 +1,5 @@
 <div class="container-form"></div>
-<form action="/restaurants/{{{store._id}}}" method="POST" style="width:60%; position: absolute; top: 30%; left:20%">
+<form action="/restaurants/{{{store._id}}}" method="POST" class="edit">
   <div class="form-row">
     <div class="form-group col-md-6">
       <div class="col">
@@ -51,7 +51,7 @@
       <input type="text" class="form-control" placeholder="描述" name="description" value="{{{store.description}}}">
     </div>
   </div>
-  <div style="text-align:right;">
-    <button type="submit" class="btn btn-primary" style="padding: 15px 40px; margin-right: 15px;">修改</button>
+  <div class="edit-button">
+    <button type="submit" class="btn btn-primary">修改</button>
   </div>
 </form>
