--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,5 +1,5 @@
 <div class="container-form"></div>
-<form action="/restaurants" method="POST" style="width: 60%; position: absolute; top: 30%; left:20%">
+<form action="/restaurants" method="POST" class="new-form">
   <div class="form-row">
     <div class="form-group col-md-6">
       <div class="col">
@@ -54,6 +54,6 @@
     </div>
   </div>
   <div style="text-align:right;">
-    <button type="submit" class="btn btn-info" style="padding: 15px 40px; margin-right: 15px;">新增</button>
+    <button type="submit" class="btn btn-info">新增</button>
   </div>
 </form>
