--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -13,19 +13,19 @@
     </div>
   </div>
   <div class="form-row">
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-5">
       <div class="col">
         <input type="text" class="form-control" placeholder="類別" name="category" required>
       </div>
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-5">
       <div class="col">
         <input type="text" class="form-control" placeholder="電話" name="phone" required>
       </div>
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-2">
       <div class="col">
-        <input type="text" class="form-control" placeholder="評價" name="rating" required>
+        <input type="number" class="form-control" min="0" max="5" placeholder="評價" name="rating" step="0.1" required>
       </div>
     </div>
   </div>
