Add method-override and update to RESTful routes

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,5 +1,5 @@
 <div class="container-form"></div>
-<form action="/restaurants/{{{store._id}}}" method="POST" class="edit">
+<form action="/restaurants/{{{store._id}}}?_method=PUT" method="POST" class="edit">
   <div class="form-row">
     <div class="form-group col-md-6">
       <div class="col">
