--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,8 @@
 <!-- search bar -->
 <div class="container search-bar">
   <div class="search-bar-outer">
-    <div class="search-bar-inner">
-      <form action="/search">
-        <h4 class="mb-2">尋找餐廳：</h4>
+    <div class="search-bar-inner row">
+      <form action="/search" class="col-6">
         <div class="input-group">
           <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
             value="{{{keyword}}}" aria-describedby="search-button">
@@ -15,6 +14,15 @@
           </div>
         </div>
       </form>
+      <div class="col-6">
+        <select name="sort" id="sort">
+          <option selected="selected" disabled="disabled" style='display: none' value=''>餐廳排序</option>
+          <option value="http://localhost:3000/restaurants/5cb1afda584234823c9236b4">A->Z</option>
+          <option value="/restaurants/5cb1afda584234823c9236b4">Z->A</option>
+          <option value="/restaurants/5cb1afda584234823c9236b4">類別</option>
+          <option value="/restaurants/5cb1afda584234823c9236b4">地區</option>
+        </select>
+      </div>
     </div>
   </div>
 </div>
@@ -43,7 +51,7 @@
             <div class="button-box">
               <a href="/restaurants/{{{this._id}}}">詳細資訊</a>
               <a href="/restaurants/{{{this._id}}}/edit">修改</a>
-              <form action="/restaurants/{{{this.id}}}/delete" method="POST" style="display: inline;">
+              <form action="/restaurants/{{{this.id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
                 <button type="submit" class="btn btn-sm btn-dark">刪除</button>
               </form>
             </div>
