--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,17 +34,16 @@
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
+        <!--list-->
         {{#each restaurants}}
         <a href="/restaurants/{{this._id}}" class="text-secondary">
           <div class="card mb-3 animation">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
             <div class="card-body p-3">
               <h6 class="card-title mb-1">{{this.name}}</h6>
-
               <div class="restaurant-category mb-1">
                 <i class="fas fa-utensils pr-2"></i>{{this.category}}
               </div>
-
               <span class="badge badge-pill badge-danger font-weight-normal">
                 {{this.rating}}
                 <i class="fas fa-star fa-xs"></i>
@@ -53,9 +52,8 @@
             <div class="button-box">
               <a href="/restaurants/{{{this._id}}}">詳細資訊</a>
               <a href="/restaurants/{{{this._id}}}/edit">修改</a>
-              <form action="/restaurants/{{{this.id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
-                <button id="delete_button" type="submit" class="btn btn-sm btn-dark" data-toggle="modal" data-target="
-                      #trigger-deleteItem-{{this._id}}">刪除</button>
+              <form action="/restaurants/{{{this._id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
+                <button id="delete_button" type="submit" class="btn btn-sm btn-dark">刪除</button>
               </form>
             </div>
           </div>
