--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -1,10 +1,24 @@
-<div class="button-box-2">
-  <a href="/restaurants/{{{store._id}}}/edit?_method=PUT">修改</a>
-  <a href="/">返回</a>
-  <form action="/restaurants/{{{store._id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
-    <button type="submit" class="btn btn-sm">刪除</button>
-  </form>
-</div>
+<header>
+  <!-- navigation -->
+  <nav class="navbar navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="/">
+        <img src="https://i.postimg.cc/JG2gFgJg/logo.png" width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
+        我的餐廳清單
+      </a>
+      <div class="icon">
+        <span><a href="/restaurants/{{{store._id}}}/edit?_method=PUT"><i class="fas fa-edit"></i></a></span>
+        <span><a href="/"><i class="fas fa-sign-out-alt"></i></a></span>
+        <span>
+          <form action="/restaurants/{{{store._id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
+            <button class="trash"><i class="fas fa-trash-alt"></i></button></form>
+        </span>
+      </div>
+    </div>
+  </nav>
+
+  <div class="banner"></div>
+</header>
 <h1 class="mb-1 restaurant-show-title">{{store.name}}</h1>
 <div class="container">
   <div class="row">
