--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,7 +17,7 @@
       <div class="or">
         <span>或</span>
       </div>
-      <a href="" class="btn btn-block btn btn-primary">Facebook 登入</a>
+      <a href="/auth/facebook" class="btn btn-block btn btn-primary">Facebook 登入</a>
       <a href="" class="btn btn-block btn google-login">Google 登入</a>
     </form>
     <p class="mt-4">
