--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,7 +18,7 @@
         <span>或</span>
       </div>
       <a href="/auth/facebook" class="btn btn-block btn btn-primary">Facebook 登入</a>
-      <a href="" class="btn btn-block btn google-login">Google 登入</a>
+      <a href="/auth/google" class="btn btn-block btn google-login">Google 登入</a>
     </form>
     <p class="mt-4">
       還沒有成為會員嗎？ <a href="/users/register">快來註冊</a>
