--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -24,7 +24,7 @@
         <span>或</span>
       </div>
       <a href="/auth/facebook" class="btn btn-block btn btn-primary">Facebook 登入</a>
-      <a href="" class="btn btn-block btn google-login">Google 登入</a>
+      <a href="/auth/google" class="btn btn-block btn google-login">Google 登入</a>
     </form>
     <p class="mt-4">
       已經是會員了嗎？ <a href="/users/login">快來登入</a>
