--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -1,5 +1,19 @@
 .search_box {
   position: absolute;
+  animation-name: move;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  top: 16px;
+  z-index: 1;
+  background-color: #f8f9fa;
+}
+@keyframes move {
+  from {
+    right: 0;
+  }
+  to {
+    right: 120px;
+  }
 }
 
 .search_box > form {
