--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,11 @@
           </div>
         </span>
         <span id="search_icon" class="target-icon"><i class="fas fa-search"></i></span>
-        <span id="new_icon" class="target-icon"><a href="/restaurants/new"><i class="fas fa-folder-plus"></i></a></span>
+        <span id="new_icon" class="target-icon">
+          <a href="/restaurants/new">
+            <i class="fas fa-folder-plus"></i>
+          </a>
+        </span>
         <span id="logout_icon" class="target-icon"><a href="/users/logout"><i class="fas fa-power-off"></i></a></span>
       </div>
     </div>
