--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,6 +6,7 @@
       <img src="https://i.postimg.cc/JG2gFgJg/logo.png" width="40" height="40" class="d-inline-block align-top" alt="我的餐廳清單">
       <span>我的餐廳清單</span>
     </div>
+    {{> messages}}
     <form action="/users/login" method="POST">
       <div class="form-group">
         <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" />
