--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -6,25 +6,22 @@
       <img src="https://i.postimg.cc/JG2gFgJg/logo.png" width="40" height="40" class="d-inline-block align-top" alt="我的餐廳清單">
       <span>我的餐廳清單</span>
     </div>
+    {{> messages}}
     <form action="/users/register" method="POST">
       <div class="form-group">
         <input type="text" id="name" name="name" class="form-control" placeholder="輸入你的大名" />
       </div>
       <div class="form-group">
-        <input type="email" id="email" name="email" class="form-control" placeholder="輸入電子郵件" />
+        <input type="email" id="register_email" name="email" class="form-control" placeholder="輸入電子郵件" required>
       </div>
       <div class="form-group">
-        <input type="password" id="password" name="password" class="form-control" placeholder="輸入密碼（最少六個字元）" />
+        <input type="password" id="register_password" name="password" class="form-control" placeholder="輸入密碼（最少六個字元）"
+          required>
       </div>
       <div class="form-group">
-        <input type="password" id="password2" name="password2" class="form-control" placeholder="再一次確認密碼" />
+        <input type="password" id="password2" name="password2" class="form-control" placeholder="再一次確認密碼" required>
       </div>
       <button type="submit" class="btn btn-block local-login">註冊</button>
-      <div class="or">
-        <span>或</span>
-      </div>
-      <a href="/auth/facebook" class="btn btn-block btn btn-primary">Facebook 登入</a>
-      <a href="/auth/google" class="btn btn-block btn google-login">Google 登入</a>
     </form>
     <p class="mt-4">
       已經是會員了嗎？ <a href="/users/login">快來登入</a>
