--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,9 +31,10 @@
         <span id="new_icon" class="target-icon">
           <a href="/restaurants/new">
             <i class="fas fa-folder-plus"></i>
+            <div class="here"></div>
           </a>
         </span>
-        <span id="logout_icon" class="target-icon"><a href="/users/logout"><i class="fas fa-power-off"></i></a></span>
+        <span id="logout_icon" class="target-icon"><a href="/users/logout"><i class="fas fa-sign-out-alt"></i></a></span>
       </div>
     </div>
   </nav>
