--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -8,7 +8,7 @@
       </a>
       <div class="icon">
         <span><a href="/restaurants/{{{store._id}}}/edit?_method=PUT"><i class="fas fa-edit"></i></a></span>
-        <span><a href="/"><i class="fas fa-sign-out-alt"></i></a></span>
+        <span><a href="/"><i class="fas fa-share"></i></a></span>
         <span>
           <form action="/restaurants/{{{store._id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
             <button class="trash"><i class="fas fa-trash-alt"></i></button></form>
